<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.TelaLoginActivity">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="350dp"
            android:layout_height="371dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"

            android:layout_marginTop="28dp"
            android:src="@drawable/telainicial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_usuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_usuario"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_field_senha"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_login"
            android:textColor="#124076"
            app:backgroundTint="#F1A139"
            app:layout_constraintEnd_toEndOf="@id/textInputLayout_senha"
            app:layout_constraintStart_toStartOf="@id/textInputLayout_senha"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_senha" />

        <Button
            android:id="@+id/buttonCadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>